# loguru-parallel

./: .gitignore  Dockerfile  LICENSE  Makefile  README.md  README_review.md  pyproject.toml  pyproject_review.toml
.github/workflows/: run-tests.yml
examples/: joblib_.py  joblib_stdout.py  mp_serialized.py  parallel_stdout.py  sinks.py
examples_review/: joblib_.py  mp_serialized.py  worker_func.py
loguru_parallel/: listener.py  log_queue.py  main.py  propagate.py  utils.py  worker.py
src/loguru_parallel/: __init__.py  enqueue.py  listen.py  listener.py  log_queue.py  propagate.py  worker.py
src_review/loguru_parallel/: __init__.py  enqueue.py  propagate.py
tests/: conftest.py  test_enqueue.py  test_listen.py  test_listener.py  test_propagate.py  test_queue.py  test_smoke.py  test_utils.py
tests_review/: test_listen.py
