[project]
name = "loguru-parallel"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"

dependencies = [
    "loguru>=0.7.2",
    "joblib>=1.4.2",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
dev-dependencies = [
    "pytest>=8.3.2",
    "ruff>=0.6.2",
]

[tool.ruff]
lint.extend-select = ["I"]